--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -1,3 +1,7 @@
+html{
+    scroll-behavior: smooth;
+}
+
 body{
     font-family: 'Martel', serif;
     background-image: url(https://images.squarespace-cdn.com/content/v1/58fd82dbbf629ab224f81b68/1519968262911-6191QBX6XFQJY3KGKZ7H/ke17ZwdGBToddI8pDm48kKb8xaXhhERVG3zP28y-JQIUqsxRUqqbr1mOJYKfIPR7LoDQ9mXPOjoJoqy81S2I8N_N4V1vUb5AoIIIbLZhVYxCRW4BPu10St3TBAUQYVKcuIokUEnf1BrpkEZS0sodxgQ6n_luvtiX5Vdc0JgWdNxz6fX1PRUfRBt6MugwRY4X/Taikan-Yokoyama-Mount-Penglai.jpg);
